Changes in quota-tools from 3.04 to 3.05
* added support for quota 6.5.1 (Jan Kara)
* quotaon(8) now can get format parameter (Jan Kara)
* fixed bad return value of quota(1) (Jan Kara)
* fixed bug in quota format format detection (Jan Kara)

Changes in quota-tools from 3.03 to 3.04
* added -D_FILE_OFFSET_BITS=64 to Makefile - fixes problems with large files with some libcs (Michael Meskes)
* added -p (print state) to quotaon (Vladimir Linek, Jan Kara)
* made quotaon(8) write better error messages (Jan Kara)
* make install now creates man directories (Jan Kara)
* added -q <quotatab> and -c <configfile> options to warnquota(8) (Jan Kara)
* added some notes about quotatab to warnquota manpage (Jan Kara) 
* fixed bug in options parsing of warnquota(8) (Michael Meskes)
* ignore automount mountpoints (Philippe Troin)
* fixed minor bug in printing grace times (Jan Kara)
* fixed quotaon(8) behaviour when it sees newer kernel then it's able to handle (Jan Kara)
* minor formatting change in quotactl(2) manpage (Nathan Scott)
* init_io() is now more paranoid about quota turned on in kernel (Jan Kara)

Changes in quota-tools from 3.02 to 3.03

* added -f <filesystem> option (perform operation only for given filesystem) for edquota (Jan Kara)
* quotacheck now skips quota file scanning when file not found (Jan Kara)
* repquota shouldn't show grace times when softlimit is not exceeded (Jan Kara)
* removed bogus error message in mountpoint scanning (Jan Kara)
* fixed mountpoint scanning initialization (solved rpc.rquotad SEGFAULT) (Jan Kara)
* rpc.rquotad now doesn't need mountpoint for quota operations (Jan Kara)
* fixed compilation on sparc (Michael Meskes, Jan Kara)

Changes in quota-tools from 3.01 to 3.02

* added -n option (don't resolve names) to repquota (Jan Kara)
* quota tools now correctly handle zero grace times in old format (Jan Kara)
* edquota, setquota commit just grace times and flags - fixed possible races
  when used on live filesystem (Jan Kara)