@@ -115,10 +115,10 @@ the value is greater than or equal to one.
 .SH FILES
 .PD 0
 .TP 20
-.B aquota.user or aquota.group
+.BR aquota.user " or " aquota.group
 quota file at the filesystem root (version 2 quota, non-XFS filesystems)
 .TP
-.B quota.user or quota.group
+.BR quota.user " or " quota.group
 quota file at the filesystem root (version 1 quota, non-XFS filesystems)
 .TP
 .B /etc/mtab
