@@ -86,10 +86,10 @@ Only the super-user may view quotas which are not their own.
 .SH FILES
 .PD 0
 .TP 20
-.B aquota.user or aquota.group
+.BR aquota.user " or " aquota.group
 quota file at the filesystem root (version 2 quota, non-XFS filesystems)
 .TP
-.B quota.user or quota.group
+.BR quota.user " or " quota.group
 quota file at the filesystem root (version 1 quota, non-XFS filesystems)
 .TP
 .B /etc/mtab
